# snippy_sqlite

./: CMakeLists.txt  LICENSE
include/: DBTable.h  SQLiteDB.hpp  SnippyDB.h
include/SQLiteCpp/: Assertion.h  Backup.h  Column.h  Database.h  Exception.h  ExecuteMany.h  SQLiteCpp.h  Savepoint.h  Statement.h  Transaction.h  VariadicBind.h
src/: DBTable.cpp  DBVTable.cpp  SQLiteDB.cpp  main.cpp
src/hpp/: SQLiteDB.hpp
